- Fix margin in navbar for title and icons - Fix collapse

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -19,5 +19,5 @@
 }
 
 .margin-title {
-  margin: 0 0 5px 0;
+  margin: 0 5px 0 0;
 }
